src/main/java/org/example/models/error/ErrorModel.java
package org.example.models.error;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ErrorModel {
    private String error;
}
